Naver Moblie 따라하기 2

--- a/Day8/NaverM.html
+++ b/Day8/NaverM.html
@@ -10,17 +10,58 @@
 <body>
 	<div class="container">
 		<div class="head">
-			<div class="logo"></div>
+			<div class="logo">
+				<div class="search">
+						<a href="#"><img src="https://s.pstatic.net/static/www/mobile/edit/2015/0318/mobile_110629401121.png" width="200px" height="48px"></a>
+					</div>
+					<div class="searchinner">
+						<form>
+							<div class="searchbox">
+								<div class="searchinnerbox">
+									<input type="text" class="searchinput">
+								</div>
+								<span class="searchbuttons">
+									<button class="searchbutton">
+										<span class="searchbuttonmic"></span>
+									</button>
+									<button class="searchbutton">
+										<span class="searchbuttonphoto"></span>
+									</button>
+									<button class="searchbutton">
+										<span class="searchbuttonwhere"></span>
+									</button>
+								</span>
+							</div>
+						</form>
+						<a href="#" class="hamburg">
+							<span class="hamburgmenu"></span>
+						</a>
+					</div>
+			</div>
 			<div class="menu"></div>
 		</div>
 		<div class="main">
-			<div class="realsearch">real</div>
-			<div class="advertisement">adv</div>
-			<div class="sidenews">news2</div>
-			<div class="weather">weather</div>
-			<div class="newsmenu">newsmenu</div>
-			<div class="press">press</div>
-			<div class="middlenews">news1</div>			
+			<div class="realsearch">
+				<div class="contents">realsearch</div>
+			</div>
+			<div class="advertisement">
+				<div class="contents">adv</div>
+			</div>
+			<div class="sidenews">
+				<div class="contents">sidenews</div>
+			</div>
+			<div class="weather">
+				<div class="contents">weather</div>
+			</div>
+			<div class="newsmenu">
+				<div class="contents">newsmune</div>
+			</div>
+			<div class="press">
+				<div class="contents">press</div>
+			</div>
+			<div class="middlenews">
+				<div class="contents">middlenews</div>
+			</div>			
 		</div>
 	</div>
 </body>
