--- a/Day8/NaverM2.html
+++ b/Day8/NaverM2.html
@@ -9,7 +9,37 @@
 </head>
 <body>
 	<div class="container">
-		<div class="top"></div>
+		<div class="top">
+			<div class="search">
+				<div class="logo">
+					<a href="./NaverM2.html"><img src="https://s.pstatic.net/static/www/mobile/edit/2015/0318/mobile_110629401121.png" width="200px" height="48px"></a>
+				</div>
+				<div class="search-in">
+					<form>
+						<div class="search-box">
+							<div class="search-inbox">
+								<input type="text" class="search-input">
+							</div>
+							<span class="btns">
+								<button class="btn">
+									<span class="btn1"></span>
+								</button>
+								<button class="btn">
+									<span class="btn2"></span>
+								</button>
+								<button class="btn">
+									<span class="btn3"></span>
+								</button>
+							</span>
+						</div>
+					</form>
+					<a href="#" class="ham-box">
+						<span class="ham-menu"></span>
+					</a>
+				</div>
+			</div>
+			<div class="menu"></div>
+		</div>
 		<div class="bottom">	
 			<div class="bottom-in">
 				<div id=box1 class="contents"></div>
