반응형 페이지 및 햄버거 메뉴 구현 1

--- a/Day8/NaverM.html
+++ b/Day8/NaverM.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="NaverM.css">
-	<title>NAVERM</title>
+	<title>M-NAVER</title>
 </head>
 <body>
 	<div class="container">
@@ -38,7 +38,52 @@
 						</a>
 					</div>
 			</div>
-			<div class="menu"></div>
+			<div class="menu">
+				<div class="menuicons">
+						<ul class="menuiconsinner">
+							<li class="menuiconslist">
+								<a href="#"><span class="menuicon menuiconslistnews"></span></a>
+							</li>
+							<li class="menuiconslist">
+								<a href="#" class="menuiconmargin"><span class="menuicon menuiconslistentertaint"></span></a>
+							</li>
+							<li class="menuiconslist">
+								<a href="#" class="menuiconmargin"><span class="menuicon menuiconslistsports"></span></a>
+							</li>
+							<li class="menuiconslist">
+								<a href="#" class="menuiconmargin"><span class="menuicon menuiconslistshopping"></span></a>
+							</li>
+							<li class="menuiconslist">
+								<a href="#" class="menuiconmargin"><span class="menuicon menuiconslistours"></span></a>
+							</li>
+						</ul>
+						<a href="#" class="pluspanel">
+							<div class="pluspanelicon"></div>
+						</a>
+					</div>
+				<a href="#" class="menuhamburg">
+					<span class="menuhamburgmenu"></span>
+					<div class="menuhamburgopenlist">
+						<ul>
+							<li class="menuhamburglist">
+								<a href="#"><span class="menuicon menuiconslistnews"></span></a>
+							</li>
+							<li class="menuhamburglist">
+								<a href="#"><span class="menuicon menuiconslistentertaint"></span></a>
+							</li>
+							<li class="menuhamburglist">
+								<a href="#"><span class="menuicon menuiconslistsports"></span></a>
+							</li>
+							<li class="menuhamburglist">
+								<a href="#"><span class="menuicon menuiconslistshopping"></span></a>
+							</li>
+							<li class="menuhamburglist">
+								<a href="#"><span class="menuicon menuiconslistours"></span></a>
+							</li>
+						</ul>
+					</div>
+				</a>
+			</div>
 		</div>
 		<div class="main">
 			<div class="realsearch">
