2주 종합 업데이트

--- a/Day7/signup.html
+++ b/Day7/signup.html
@@ -24,13 +24,13 @@
 			<div class="row">
 				<div class="col-2">비밀번호</div>
 				<div class="form-group col-4">
-					<input type="password" class="form-control" id="pwd" name="pwd">
+					<input type="password" class="form-control" id="Pwd" name="Pwd">
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-2">비밀번호 확인</div>
 				<div class="form-group col-4">
-					<input type="password" class="form-control" id="repwd" name="repwd">
+					<input type="password" class="form-control" id="RePwd" name="RePwd">
 				</div>
 			</div>
 			<div class="row">
