네이버 기능 구현하기 2

--- a/Day14/NaverBox.html
+++ b/Day14/NaverBox.html
@@ -135,11 +135,106 @@
             <li><span class="realnumber">7</span><span class="realsearch"> 이용대</span></li>
             <li><span class="realnumber">8</span><span class="realsearch"> 진학사</span></li>
             <li><span class="realnumber">9</span><span class="realsearch"> 나쁜형사</span></li>
+            <li><span class="realnumber">10</span><span class="realsearch"> 조보아</span></li>
           </ul>
         </div>
         <div class="realsearcharrow"></div>
         <div class="popuprealsearch">
           <div class="popuprealsearchtop">급상승 검색어</div>
+          <div>
+            <div class="popuprealmune">
+              <a class="popuprealmuneinner" id="popup1to10" href="#">1위 ~ 10위</a>
+              <a class="popuprealmuneinner" id="popup11to20" href="#">11위 ~ 20위</a>
+            </div>
+            <div class="popuprealmunebody popup1to10list">
+              <ul>
+                <li>
+                  <a href="#"><span class="popuplistnumber">1</span><span class="popuplisttext">2019 수능 등급컷</span></a>
+                  <a class="datawrapgraph" href="#"><i class="datawrapgraphicon"></i></a>
+                </li>
+                <li>
+                  <a href="#"><span class="popuplistnumber">2</span><span class="popuplisttext">노니 쇳가루</span></a>
+                  <a class="datawrapgraph" href="#"><i class="datawrapgraphicon"></i></a>
+                </li>
+                <li>
+                  <a href="#"><span class="popuplistnumber">3</span><span class="popuplisttext">금양체질</span></a>
+                  <a class="datawrapgraph" href="#"><i class="datawrapgraphicon"></i></a>
+                </li>
+                <li>
+                  <a href="#"><span class="popuplistnumber">4</span><span class="popuplisttext">제보자들</span></a>
+                  <a class="datawrapgraph" href="#"><i class="datawrapgraphicon"></i></a>
+                </li>
+                <li>
+                  <a href="#"><span class="popuplistnumber">5</span><span class="popuplisttext">농구선수 김영희</span></a>
+                  <a class="datawrapgraph" href="#"><i class="datawrapgraphicon"></i></a>
+                </li>
+                <li>
+                  <a href="#"><span class="popuplistnumber">6</span><span class="popuplisttext">뗀뽀걸즈</span></a>
+                  <a class="datawrapgraph" href="#"><i class="datawrapgraphicon"></i></a>
+                </li>
+                <li>
+                  <a href="#"><span class="popuplistnumber">7</span><span class="popuplisttext">이용대</span></a>
+                  <a class="datawrapgraph" href="#"><i class="datawrapgraphicon"></i></a>
+                </li>
+                <li>
+                  <a href="#"><span class="popuplistnumber">8</span><span class="popuplisttext">진학사</span></a>
+                  <a class="datawrapgraph" href="#"><i class="datawrapgraphicon"></i></a>
+                </li>
+                <li>
+                  <a href="#"><span class="popuplistnumber">9</span><span class="popuplisttext">나쁜형사</span></a>
+                  <a class="datawrapgraph" href="#"><i class="datawrapgraphicon"></i></a>
+                </li>
+                <li>
+                  <a href="#"><span class="popuplistnumber">10</span><span class="popuplisttext">조보아</span></a>
+                  <a class="datawrapgraph" href="#"><i class="datawrapgraphicon"></i></a>
+                </li>
+              </ul>
+            </div>
+            <div class="popuprealmunebody popup11to20list">
+              <ul>
+                <li>
+                  <a href="#"><span class="popuplistnumber">11</span><span class="popuplisttext">조보아</span></a>
+                  <a class="datawrapgraph" href="#"><i class="datawrapgraphicon"></i></a>
+                </li>
+                <li>
+                  <a href="#"><span class="popuplistnumber">12</span><span class="popuplisttext">조보아</span></a>
+                  <a class="datawrapgraph" href="#"><i class="datawrapgraphicon"></i></a>
+                </li>
+                <li>
+                  <a href="#"><span class="popuplistnumber">13</span><span class="popuplisttext">조보아</span></a>
+                  <a class="datawrapgraph" href="#"><i class="datawrapgraphicon"></i></a>
+                </li>
+                <li>
+                  <a href="#"><span class="popuplistnumber">14</span><span class="popuplisttext">조보아</span></a>
+                  <a class="datawrapgraph" href="#"><i class="datawrapgraphicon"></i></a>
+                </li>
+                <li>
+                  <a href="#"><span class="popuplistnumber">15</span><span class="popuplisttext">조보아</span></a>
+                  <a class="datawrapgraph" href="#"><i class="datawrapgraphicon"></i></a>
+                </li>
+                <li>
+                  <a href="#"><span class="popuplistnumber">16</span><span class="popuplisttext">조보아</span></a>
+                  <a class="datawrapgraph" href="#"><i class="datawrapgraphicon"></i></a>
+                </li>
+                <li>
+                  <a href="#"><span class="popuplistnumber">17</span><span class="popuplisttext">조보아</span></a>
+                  <a class="datawrapgraph" href="#"><i class="datawrapgraphicon"></i></a>
+                </li>
+                <li>
+                  <a href="#"><span class="popuplistnumber">18</span><span class="popuplisttext">조보아</span></a>
+                  <a class="datawrapgraph" href="#"><i class="datawrapgraphicon"></i></a>
+                </li>
+                <li>
+                  <a href="#"><span class="popuplistnumber">19</span><span class="popuplisttext">조보아</span></a>
+                  <a class="datawrapgraph" href="#"><i class="datawrapgraphicon"></i></a>
+                </li>
+                <li>
+                  <a href="#"><span class="popuplistnumber">20</span><span class="popuplisttext">조보아</span></a>
+                  <a class="datawrapgraph" href="#"><i class="datawrapgraphicon"></i></a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
         <!-- 실시간 검색 -->
       </div>
@@ -187,7 +282,7 @@
               <div class="newslistfrontsort">
                 <a href="#" class="newslistfirst">전체 언론사</a>
                 <span class="newslistfrontbar"></span>
-                <a href="#">MY 뉴스</a>
+                <a class="newslistmynews" href="#">MY 뉴스</a>
               </div>
             </div>
             <div class="newslisttail">
@@ -211,57 +306,129 @@
             <ul class="api-list">
               <li>
                 <a href="#"><img src="https://s.pstatic.net/static/newsstand/up/2017/0424/nsd173559874.png"></a>
+                <div class="api-list-popup">
+                  <a class="api-list-popup-fsub" href="#">구독</a>
+                  <a class="api-list-popup-lsub" href="#">기사보기</a>
+                </div>
               </li>
               <li>
                 <a href="#"><img src="https://s.pstatic.net/static/newsstand/up/2017/0424/nsd173223533.png"></a>
+                <div class="api-list-popup">
+                  <a class="api-list-popup-fsub" href="#">구독</a>
+                  <a class="api-list-popup-lsub" href="#">기사보기</a>
+                </div>
               </li>
               <li>
                 <a href="#"><img src="https://s.pstatic.net/static/newsstand/up/2018/0913/nsd104554287.png"></a>
+                <div class="api-list-popup">
+                  <a class="api-list-popup-fsub" href="#">구독</a>
+                  <a class="api-list-popup-lsub" href="#">기사보기</a>
+                </div>
               </li>
               <li>
                 <a href="#"><img src="https://s.pstatic.net/static/newsstand/up/2017/0424/nsd183553864.png"></a>
+                <div class="api-list-popup">
+                  <a class="api-list-popup-fsub" href="#">구독</a>
+                  <a class="api-list-popup-lsub" href="#">기사보기</a>
+                </div>
               </li>
               <li>
                 <a href="#"><img src="https://s.pstatic.net/static/newsstand/up/2017/1201/nsd161818802.png"></a>
+                <div class="api-list-popup">
+                  <a class="api-list-popup-fsub" href="#">구독</a>
+                  <a class="api-list-popup-lsub" href="#">기사보기</a>
+                </div>
               </li>
               <li>
                 <a href="#"><img src="https://s.pstatic.net/static/newsstand/up/2017/0424/nsd154314463.png"></a>
+                <div class="api-list-popup">
+                  <a class="api-list-popup-fsub" href="#">구독</a>
+                  <a class="api-list-popup-lsub" href="#">기사보기</a>
+                </div>
               </li>
               <li>
                 <a href="#"><img src="https://s.pstatic.net/static/newsstand/up/2017/0424/nsd154619739.png"></a>
+                <div class="api-list-popup">
+                  <a class="api-list-popup-fsub" href="#">구독</a>
+                  <a class="api-list-popup-lsub" href="#">기사보기</a>
+                </div>
               </li>
               <li>
                 <a href="#"><img src="https://s.pstatic.net/static/newsstand/up/2018/1016/nsd1687672.png"></a>
+                <div class="api-list-popup">
+                  <a class="api-list-popup-fsub" href="#">구독</a>
+                  <a class="api-list-popup-lsub" href="#">기사보기</a>
+                </div>
               </li>
               <li>
                 <a href="#"><img src="https://s.pstatic.net/static/newsstand/up/2017/0424/nsd17324940.png"></a>
+                <div class="api-list-popup">
+                  <a class="api-list-popup-fsub" href="#">구독</a>
+                  <a class="api-list-popup-lsub" href="#">기사보기</a>
+                </div>
               </li>
               <li>
                 <a href="#"><img src="https://s.pstatic.net/static/newsstand/up/2017/0424/nsd173138949.png"></a>
+                <div class="api-list-popup">
+                  <a class="api-list-popup-fsub" href="#">구독</a>
+                  <a class="api-list-popup-lsub" href="#">기사보기</a>
+                </div>
               </li>
               <li>
                 <a href="#"><img src="https://s.pstatic.net/static/newsstand/up/2017/0424/nsd144543120.png"></a>
+                <div class="api-list-popup">
+                  <a class="api-list-popup-fsub" href="#">구독</a>
+                  <a class="api-list-popup-lsub" href="#">기사보기</a>
+                </div>
               </li>
               <li>
                 <a href="#"><img src="https://s.pstatic.net/static/newsstand/up/2018/0312/nsd11361752.png"></a>
+                <div class="api-list-popup">
+                  <a class="api-list-popup-fsub" href="#">구독</a>
+                  <a class="api-list-popup-lsub" href="#">기사보기</a>
+                </div>
               </li>
               <li>
                 <a href="#"><img src="https://s.pstatic.net/static/newsstand/up/2017/0424/nsd192546763.png"></a>
+                <div class="api-list-popup">
+                  <a class="api-list-popup-fsub" href="#">구독</a>
+                  <a class="api-list-popup-lsub" href="#">기사보기</a>
+                </div>
               </li>
               <li>
                 <a href="#"><img src="https://s.pstatic.net/static/newsstand/up/2017/1209/nsd1413096.png"></a>
+                <div class="api-list-popup">
+                  <a class="api-list-popup-fsub" href="#">구독</a>
+                  <a class="api-list-popup-lsub" href="#">기사보기</a>
+                </div>
               </li>
               <li>
                 <a href="#"><img src="https://s.pstatic.net/static/newsstand/up/2017/0424/nsd151840663.png"></a>
+                <div class="api-list-popup">
+                  <a class="api-list-popup-fsub" href="#">구독</a>
+                  <a class="api-list-popup-lsub" href="#">기사보기</a>
+                </div>
               </li>
               <li>
                 <a href="#"><img src="https://s.pstatic.net/static/newsstand/up/2017/0424/nsd14479875.png"></a>
+                <div class="api-list-popup">
+                  <a class="api-list-popup-fsub" href="#">구독</a>
+                  <a class="api-list-popup-lsub" href="#">기사보기</a>
+                </div>
               </li>
               <li>
                 <a href="#"><img src="https://s.pstatic.net/static/newsstand/up/2017/0424/nsd154426359.png"></a>
+                <div class="api-list-popup">
+                  <a class="api-list-popup-fsub" href="#">구독</a>
+                  <a class="api-list-popup-lsub" href="#">기사보기</a>
+                </div>
               </li>
               <li>
                 <a href="#"><img src="https://s.pstatic.net/static/newsstand/up/2017/0424/nsd17133978.png"></a>
+                <div class="api-list-popup">
+                  <a class="api-list-popup-fsub" href="#">구독</a>
+                  <a class="api-list-popup-lsub" href="#">기사보기</a>
+                </div>
               </li>
             </ul>
             <!-- <div>
@@ -320,24 +487,59 @@
                 <span class="hi_day">(수)</span>
               </a>
               <i class="timesquarebar">|</i>
-              <a href="#" class="hi_tail">
-                <span>영어회화
-									<i class="hi_tailicon"></i>
-								</span>
-              </a>
+              <div class="timesquareheadinner">
+                <a href="#" class="hi_tail">
+                  <span>청주시 산남동
+										<i class="hi_tailicon"></i>
+									</span>
+                </a>
+                <a href="#" class="hi_tail">
+                  <span>뉴스</span>
+                </a>
+                <a href="#" class="hi_tail">
+                  <span>스포츠</span>
+                </a>
+                <a href="#" class="hi_tail">
+                  <span>증시</span>
+                </a>
+                <a href="#" class="hi_tail">
+                  <span>영어회화
+										<i class="hi_tailicon"></i>
+									</span>
+                </a>
+                <a href="#" class="hi_tail">
+                  <span>생활도구</span>
+                </a>
+              </div>
             </div>
-            <div class="timesquareheadcount"><b class="colorblack">5</b>/7</div>
+            <div class="timesquareheadcount"><b class="colorblack">1</b>/6</div>
             <div class="timesquareheadpage">
               <a href="#" class="timesquareleftarrow"><i class="timeleftarrow"></i></a>
               <a href="#" class="timesquarerightarrow"><i class="timerightarrow"></i></a>
             </div>
           </div>
           <div class="timesquare">
-            <div class="pleasesecret">
-              <p class="pleasesecreth">비밀 지키세요.</p>
-              <p class="pleasesecretv">Please keep it a secret.</p>
-              <p class="pleasesecrets">플리즈 킵 잇 어 시크릿</p>
+            <div class="timesquareinner">
+              <div class="weather">
+                <a class="weatherinfo" href="#"></a>
+                <div class="weatherbreaking">
+                  <a class="weatherb1" href="#">날씨</a>
+                  <a class="weatherb2" href="#">실시간 기상 정보 확인하기<i class="weatherbar">|</i></a>
+                  <a class="weatherb3" href="#">주간 예보</a>
+                </div>
+              </div>
             </div>
+            <div class="timesquareinner">2</div>
+            <div class="timesquareinner">3</div>
+            <div class="timesquareinner">4</div>
+            <div class="timesquareinner">
+              <div class="pleasesecret">
+                <p class="pleasesecreth">비밀 지키세요.</p>
+                <p class="pleasesecretv">Please keep it a secret.</p>
+                <p class="pleasesecrets">플리즈 킵 잇 어 시크릿</p>
+              </div>
+            </div>
+            <div class="timesquareinner">6</div>
           </div>
           <!-- 타임 스퀘어 -->
         </div>
